remove billboard charts , change UI googleplay charts